# 101-linux-commands-ebook

./: .gitignore  CONTRIBUTING.md  Guidelines.md  LICENSE  README.md  composer.json  index.html  mkdocs.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: chapter_request.md  false_info_report.md
.github/workflows/: cli.yml  ibis.yml  mkdocs-publish-ghpages.yml  tags.yml
cli/: .flake8  README.md  __version__.py  cli.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_cli.py
cli/commands/: build.py  hello.py  list.py  search.py  show.py  version.py
cli/data/: commands.json
cli/linux_commands_cli/: cli.py
cli/linux_commands_cli/commands/: hello.py  list.py  search.py  show.py  version.py
cli/scripts/: generate_command_index.py
cli/states/: global_state.py
cli/tests/: test_cli.py  test_generate_index.py
cli/tests/cli/: test_cli.py
composer/: compose.py  config.yml  mkdocs_gen.yml  nav_updater.py  updater.sh
docs/: command_navs.yml  download.md  index.md  slugmap.json
docs/about/: index.md
docs/assets/css-js/general/css/: progressbar.css  social-color-stryle.css
docs/assets/css-js/general/js/: highlight-config.js
docs/assets/css-js/mkdocs-pdf-export/css/: pdf-export.css
docs/assets/css-js/mkdocs-tooltips/css/: custom.css
docs/assets/css-js/termynal/: readme.md
docs/assets/snippets/macros/: all.j2  common.j2
ebook/: README.md
ebook/en/: ibis.php
ebook/en/assets/: theme-html.html
ebook/en/content/: 000-the-introduction-command.md  001-the-ls-command.md  002-the-cd-command.md  003-the-cat-tac-command.md  004-the-head-command.md  005-the-tail-command.md  006-the-pwd-command.md  007-the-touch-command.md  008-the-cal-command.md  009-the-bc-command.md  010-the-df-command.md  011-the-help-command.md  012-the-factor-command.md  013-the-uname-command.md  014-the-mkdir-command.md  015-the-gzip-command.md  016-the-whatis-command.md  017-the-who-command.md  018-the-free-command.md  019-the-top-htop-command.md  020-the-sl-command.md  021-the-echo-command.md  022-the-finger-command.md  023-the-groups-command.md  024-the-man-command.md  025-the-passwd-command.md  026-the-w-command.md  027-the-whoami-command.md  028-the-history-command.md  029-the-login-command.md  030-the-lscpu-command.md  031-the-cp-command.md  032-the-mv-command.md  033-the-ps-command.md  034-the-kill-command.md  035-the-killall-command.md  036-the-env-command.md  037-the-printenv-command.md  038-the-hostname-command.md  039-the-nano-command.md  (+142 more)
ebook/en/export/: 101-linux-commands-ebook.epub  101-linux-commands-ebook.html  101-linux-commands.epub  101-linux-commands.html
requirements/: docs.txt  requirements.txt
(+4 files in other folders)
