[project]
name = "linux-commands-cli"
version = "0.1.0"
description = "Interactive CLI tool for 101 Linux Commands eBook."
authors = [{name = "Bobby Iliev <bobby@bobbyiliev.com>"}]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: Education",
]
[dependency-groups]
main = [
    "click==8.1.7",
    "typer[all]==0.12.3"
]
dev = [
    {include-group = "main"},
    "pytest",
    "pytest-cov",
    "flake8",
    "black",
    "isort",
    "mypy"
]

[project.urls]
Repository = "https://github.com/seppzer0/101-linux-commands"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
linux-cli = "linux_commands_cli.cli:main"
l101 = "linux_commands_cli.cli:main"

[tool.uv]
default-groups = ["main"]

[tool.hatch.build.targets.wheel]
packages = ["linux_commands_cli"]

[[tool.uv.index]]
name = "pypi"
default = true
url = "https://pypi.org/simple"

[tool.flake8]
max-line-length = 88
extend-ignore = [
    "E203",  # E203: whitespace before ':' (conflicts with black)
    "W503",  # W503: line break before binary operator (conflicts with black)
    "E402"   # E402: module level import not at top (needed for sys.path manipulation)
]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    ".env",
    "env",
    ".mypy_cache",
    "build",
    "dist"
]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = 3.9
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = false
show_error_codes = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = "__version__"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "commands"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "commands.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "typer.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pytest.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--import-mode=importlib -vv"
testpaths = ["tests"]
